#pragma once

#include <iostream>

class Player{
private :
    std::string name;
    bool isAI;
public:

};
