#pragma once
#include "board.h"

class Variant{
    std::str name;

    Board getInitialSetup();
    int getBoardSize();
};

